# parita_project_18

FaceDetection_Realtime/: LICENSE  README.md  detect_faces_video.py
Inventory-Management/: README.md  inventory_management.sql  run.py
Invoice-Generator/: Readme.md  generateInvoice.py  invoice_template.html
Library-Management-System/: LICENSE  Library Management System  README.md
PyrateLimiter/: CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yaml  noxfile.py  pyproject.toml  setup.cfg
Shortlink/: LICENSE  README.md  app.py  db.sqlite3
Simple-Chess-Engine/: LICENSE  README.md  engine.py  pyproject.toml
currencyconverter/: AUTHORS.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  test.py  test_main.py  tox.ini  update_data.sh
imagehash/: LICENSE  MANIFEST.in  Makefile  README.rst  find_similar_images.py  output.html  requirements-conda.txt  requirements-linting-anaconda.txt  requirements-linting-old.txt  requirements-linting.txt  setup.cfg  setup.py
linkedin-jobs-scraper/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
password-generator/: LICENSE  README.md  password_generator.py  setup.py  test.py  tests.py
pymaze/: LICENCE  README.md  requirements.txt
python-qrcode/: CHANGES.rst  PACKAGING.rst  README.rst  TESTING.rst  justfile  pyproject.toml  signing-key.asc
pyzbar/: CHANGELOG.md  DEVELOPING.md  MANIFEST.in.all  MANIFEST.in.win32  MANIFEST.in.win64  Maincode.py  README.rst  bounding_box_and_polygon.py  build.sh  requirements-test.txt  requirements.txt  setup.py  tox.ini
snake-ga/: DQN.py  (+4 more)
(+212 files in other folders)
